:toc: macro
:toclevels: 1

= Change Log

A high level summary of noteworthy changes in each version.

NOTE:: Dependency version bumps are not listed here.

// git log --pretty="* %s" 0.3.0.2..HEAD

// only show TOC if this is the root document (not in the README)
ifndef::github_name[]
toc::[]
endif::[]

== 0.5.2.4

=== Fixes

* fixes #409: Fixes support for compacted topics and when commit offset is reset
** Truncate state when bootstrap polled offset higher or lower than committed and prune missing records (#425)

== 0.5.2.3

=== Improvements

* Transactional commit mode system improvements and docs (#355)
** Clarifies transaction system with much better documentation.
** Fixes a potential race condition which could cause offset leaks between transactions boundaries.
** Introduces lock acquisition timeouts.
** Fixes a potential issue with removing records from the retry queue incorrectly, by having an inconsistency between compareTo and equals in the retry TreeMap.
* Adds a very simple Dependency Injection system modeled on Dagger (#398)
* Various refactorings e.g. new ProducerWrap

* Dependencies
** build(deps): prod: zstd, reactor, dev: podam, progressbar, postgresql maven-plugins: versions, help (#420)
** build(deps-dev): bump postgresql from 42.4.1 to 42.5.0
** bump podam, progressbar, zstd, reactor
** build(deps): bump versions-maven-plugin from 2.11.0 to 2.12.0
** build(deps): bump maven-help-plugin from 3.2.0 to 3.3.0
** build(deps-dev): bump Confluent Platform Kafka Broker to 7.2.2 (#421)
** build(deps): Upgrade to AK 3.3.0 (#309)


=== Fixes

* fixes #419: NoSuchElementException during race condition in PartitionState (#422)
* Fixes #412: ClassCastException with retryDelayProvider (#417)
* fixes ShardManager retryQueue ordering and set issues due to poor Comparator implementation (#423)


== v0.5.2.2

=== Fixes

- Fixes dependency scope for Mockito from compile to test (#376)

== v0.5.2.1

=== Fixes
