@@ -18,8 +18,9 @@ endif::[]
 
 === Fixes
 
-* fixes #409: Fixes support for compacted topics and when commit offset is reset
-** Truncate state when bootstrap polled offset higher or lower than committed and prune missing records (#425)
+* fixes #409: Adds support for compacted topics and commit offset resetting (#425)
+** Truncate the offset state when bootstrap polled offset higher or lower than committed
+** Prune missing records from the tracked incomplete offset state, when they're missing from polled batches
 
 == 0.5.2.3
 
